--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -4,6 +4,6 @@ button:
   go: İLERİ
   home: Anasayfa
   hellovivaldi: Merhaba Vivaldi
-  toggle_dark: Temayı değiştir
+  toggle_dark: Koyu temayı kullan
   toggle_langs: Dilleri değiştir
 not-found: Bulunamadı
