--- a/locales/en.yml
+++ b/locales/en.yml
@@ -5,5 +5,5 @@ button:
   home: Home
   hellovivaldi: Hello Vivaldi
   toggle_dark: Use dark theme
-  toggle_langs: Change languages
+  toggle_langs: Select your languages
 not-found: Not found
