--- a/locales/tr.yml
+++ b/locales/tr.yml
@@ -5,5 +5,5 @@ button:
   home: Anasayfa
   hellovivaldi: Merhaba Vivaldi
   toggle_dark: Koyu temayı kullan
-  toggle_langs: Dilleri değiştir
+  toggle_langs: Dilinizi seçin
 not-found: Bulunamadı
