--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,3 +1,5 @@
+site:
+  shortDescription: Completely free and open source musical ear training application.
 button:
   about: About
   back: Back
@@ -6,4 +8,10 @@ button:
   hellovivaldi: Hello Vivaldi
   toggle_dark: Use dark theme
   toggle_langs: Select your languages
+sidebar:
+  pitch_training: Pitch Training
+  interval_training: Interval Training
+  related_minors: Related Minors
+  whats_news: What's News
+  global_settings: Global Settings
 not-found: Not found
